fix pre overflow css

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -305,6 +305,7 @@ td {
 
 pre {
 	background: var(--light-grey-color);
+    overflow-x: scroll;
 }
 
 code {
